--- a/Graylog.SampleApi/Graylog.SampleApi.csproj
+++ b/Graylog.SampleApi/Graylog.SampleApi.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog.Gelf" Version="1.1.4" />
     <PackageReference Include="NLog.GelfLayout" Version="1.2.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
