--- a/Graylog.SampleApi/nlog.config
+++ b/Graylog.SampleApi/nlog.config
@@ -1,17 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
-  
+
   <extensions>
-    <add assembly="NLog.Layouts.GelfLayout" />
+    <!--<add assembly="NLog.Layouts.GelfLayout" />-->
+    <add assembly="NLog.Gelf" />
   </extensions>
 
+  <variable name="methodInfo"
+            value="${callsite:className=true:includeNamespace=false:fileName=true:includeSourcePath=false:methodName=true:cleanNamesOfAnonymousDelegates=true:cleanNamesOfAsyncContinuations=true}" />
+  <variable name="layout"
+            value="${longdate}|${pad:padding=4:inner=${threadid}}|${pad:padding=-5:inner=${uppercase:${level}}}|${mdc:item=RequestGuid}|${logger}|${message}${onexception:inner=${newline}${exception:format=tostring}}" />
+  <variable name="logPath"
+            value="${basedir}/Log" />
+
   <targets async="true">
-    <target xsi:type="File" name="File" filename="C:\logs\GraylogNlog_${shortdate}.txt" layout="${longdate}|${level:upperCase=true}|${logger}|${aspnet-Request-Method}|url: ${aspnet-Request-Url}${aspnet-Request-QueryString}|${message}" concurrentWrites="false" />
-    
-    <target xsi:type="Network" name="GelfHttp" address="http://localhost:12201/gelf" layout="${gelf:facility=GraylogNlog}" />
+    <target name="AsyncWrapper"
+            xsi:type="AsyncWrapper"
+            overflowAction="Grow"
+            queueLimit="50000"
+            batchSize="500"
+            timeToSleepBetweenBatches="0">
+      <target name="file"
+              xsi:type="File"
+              encoding="utf-8"
+              keepFileOpen="true"
+              openFileCacheTimeout="30"
+              maxArchiveFiles="0"
+              archiveFileName="${logPath}/${shortdate}/${date:format=HHmm}.{#}.log"
+              archiveNumbering="Sequence"
+              archiveAboveSize="10485760"
+              fileName="${logPath}/${shortdate}.log"
+              layout="${layout}" />
+    </target>
+
+    <!--<target name="GelfHttp"
+            xsi:type="Network"
+            address="http://localhost:12201/gelf"
+            layout="${gelf:facility=GraylogNlog}"
+            sendLastFormatParameter="true">
+
+      -->
+
+    <target name="GelfHttp" 
+            xsi:type="GelfHttp" 
+            serverUrl="http://localhost:12201/gelf" 
+            facility="GraylogNlog" 
+            layout="${layout}"/>
+
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="File, GelfHttp" />
+    <logger name="*" minlevel="Trace" writeTo="AsyncWrapper, GelfHttp" />
   </rules>
 </nlog>
