GelfHttp, GelfTcp, GelfUdp sample with EasyGelf

--- a/Graylog.SampleApi/nlog.config
+++ b/Graylog.SampleApi/nlog.config
@@ -2,8 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 
   <extensions>
-    <!-- https://github.com/mantasaudickas/NLog.Gelf -->
-    <add assembly="NLog.Gelf" />
+    <add assembly="EasyGelf.NLog" />
   </extensions>
 
   <variable name="methodInfo"
@@ -33,15 +32,42 @@
               layout="${layout}" />
     </target>
 
-    <target name="GelfHttp" 
-            xsi:type="GelfHttp" 
-            serverUrl="http://localhost:11101/gelf" 
-            facility="GraylogNlog" 
-            layout="${layout}"/>
+    <target name="GelfHttp"
+            xsi:type="GelfHttp"
+            remoteAddress="localhost" remotePort="11100"
+            facility="GelfHttp"
+            layout="${layout}">
+      <parameter name="thread" layout="${threadid}" />
+      <parameter name="levelName" layout="${uppercase:${level}}" />
+      <parameter name="url" layout="${aspnet-request-url}" />
+      <parameter name="methodInfo" layout="${methodInfo}" />
+    </target>
+    
+    <target name="GelfTcp"
+            xsi:type="GelfTcp"
+            remoteAddress="localhost" remotePort="11101"
+            facility="GelfTcp"
+            layout="${layout}">
+      <parameter name="thread" layout="${threadid}" />
+      <parameter name="levelName" layout="${uppercase:${level}}" />
+      <parameter name="url" layout="${aspnet-request-url}" />
+      <parameter name="methodInfo" layout="${methodInfo}" />
+    </target>
+    
+    <target name="GelfUdp"
+            xsi:type="GelfUdp"
+            remoteAddress="127.0.0.1" remotePort="11102"
+            facility="GelfUdp"
+            layout="${layout}">
+      <parameter name="thread" layout="${threadid}" />
+      <parameter name="levelName" layout="${uppercase:${level}}" />
+      <parameter name="url" layout="${aspnet-request-url}" />
+      <parameter name="methodInfo" layout="${methodInfo}" />
+    </target>
 
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="AsyncWrapper, GelfHttp" />
+    <logger name="*" minlevel="Trace" writeTo="AsyncWrapper, GelfHttp, GelfTcp, GelfUdp" />
   </rules>
 </nlog>
