--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,14 +43,16 @@ services:
     ports:
       # Graylog web interface and REST API
       - 9000:9000
-      # Syslog TCP
+      # Syslog TCP/UDP
       - 1514:1514
-      # Syslog UDP
       - 1514:1514/udp
-      # GELF TCP
+      # GELF TCP/UDP
+      - 11100:11100
+      - 11100:11100/udp
       - 11101:11101
-      # GELF UDP
       - 11101:11101/udp
+      - 11102:11102
+      - 11102:11102/udp
 networks:
   graylog:
     driver: bridge
