--- a/Graylog.SampleApi/nlog.config
+++ b/Graylog.SampleApi/nlog.config
@@ -1,47 +1,62 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
+﻿<?xml version="1.0" encoding="utf-8"?>
 
-  <extensions>
-    <!-- https://github.com/mantasaudickas/NLog.Gelf -->
-    <add assembly="NLog.Gelf" />
-  </extensions>
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-  <variable name="methodInfo"
-            value="${callsite:className=true:includeNamespace=false:fileName=true:includeSourcePath=false:methodName=true:cleanNamesOfAnonymousDelegates=true:cleanNamesOfAsyncContinuations=true}" />
-  <variable name="layout"
-            value="${longdate}|${pad:padding=4:inner=${threadid}}|${pad:padding=-5:inner=${uppercase:${level}}}|${mdc:item=RequestGuid}|${logger}|${message}${onexception:inner=${newline}${exception:format=tostring}}" />
-  <variable name="logPath"
-            value="${basedir}/Log" />
+    <extensions>
+        <add assembly="NLog.Gelf" />
+    </extensions>
 
-  <targets async="true">
-    <target name="AsyncWrapper"
-            xsi:type="AsyncWrapper"
-            overflowAction="Grow"
-            queueLimit="50000"
-            batchSize="500"
-            timeToSleepBetweenBatches="0">
-      <target name="file"
-              xsi:type="File"
-              encoding="utf-8"
-              keepFileOpen="true"
-              openFileCacheTimeout="30"
-              maxArchiveFiles="0"
-              archiveFileName="${logPath}/${shortdate}/${date:format=HHmm}.{#}.log"
-              archiveNumbering="Sequence"
-              archiveAboveSize="10485760"
-              fileName="${logPath}/${shortdate}.log"
-              layout="${layout}" />
-    </target>
+    <variable name="methodInfo"
+              value="${callsite:className=true:includeNamespace=false:fileName=true:includeSourcePath=false:methodName=true:cleanNamesOfAnonymousDelegates=true:cleanNamesOfAsyncContinuations=true}" />
+    <variable name="layout"
+              value="${longdate}|${pad:padding=4:inner=${threadid}}|${pad:padding=-5:inner=${uppercase:${level}}}|${mdc:item=RequestGuid}|${logger}|${message}${onexception:inner=${newline}${exception:format=tostring}}" />
+    <variable name="logPath"
+              value="${basedir}/Log" />
 
-    <target name="GelfHttp" 
-            xsi:type="GelfHttp" 
-            serverUrl="http://localhost:11101/gelf" 
-            facility="GraylogNlog" 
-            layout="${layout}"/>
+    <targets async="true">
+        <target name="AsyncWrapper"
+                xsi:type="AsyncWrapper"
+                overflowAction="Grow"
+                queueLimit="50000"
+                batchSize="500"
+                timeToSleepBetweenBatches="0">
+            <target name="file"
+                    xsi:type="File"
+                    encoding="utf-8"
+                    keepFileOpen="true"
+                    openFileCacheTimeout="30"
+                    maxArchiveFiles="0"
+                    archiveFileName="${logPath}/${shortdate}/${date:format=HHmm}.{#}.log"
+                    archiveNumbering="Sequence"
+                    archiveAboveSize="10485760"
+                    fileName="${logPath}/${shortdate}.log"
+                    layout="${layout}" />
+        </target>
 
-  </targets>
+        <target name="GelfHttp"
+                xsi:type="GelfHttp"
+                serverUrl="http://localhost:11100/gelf"
+                facility="GelfHttp"
+                layout="${layout}">
+            <parameter name="thread" layout="${threadid}" />
+            <parameter name="levelName" layout="${uppercase:${level}}" />
+            <parameter name="url" layout="${aspnet-request-url}" />
+            <parameter name="methodInfo" layout="${methodInfo}" />
+        </target>
 
-  <rules>
-    <logger name="*" minlevel="Trace" writeTo="AsyncWrapper, GelfHttp" />
-  </rules>
+        <target name="GelfUdp"
+                xsi:type="GelfUdp"
+                serverUrl="127.0.0.1" port="11102"
+                facility="GelfUdp"
+                layout="${layout}">
+            <parameter name="thread" layout="${threadid}" />
+            <parameter name="levelName" layout="${uppercase:${level}}" />
+            <parameter name="url" layout="${aspnet-request-url}" />
+            <parameter name="methodInfo" layout="${methodInfo}" />
+        </target>
+    </targets>
+
+    <rules>
+        <logger name="*" minlevel="Trace" writeTo="AsyncWrapper, GelfHttp, GelfUdp" />
+    </rules>
 </nlog>
