add NLog.Layouts.GelfLayout for tcp protocol

--- a/Graylog.SampleApi/nlog.config
+++ b/Graylog.SampleApi/nlog.config
@@ -3,7 +3,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <extensions>
-        <add assembly="NLog.Gelf" />
+        <add assembly="NLog.Layouts.GelfLayout" />
     </extensions>
 
     <variable name="methodInfo"
@@ -33,30 +33,18 @@
                     layout="${layout}" />
         </target>
 
-        <target name="GelfHttp"
-                xsi:type="GelfHttp"
-                serverUrl="http://localhost:11100/gelf"
-                facility="GelfHttp"
-                layout="${layout}">
-            <parameter name="thread" layout="${threadid}" />
-            <parameter name="levelName" layout="${uppercase:${level}}" />
-            <parameter name="url" layout="${aspnet-request-url}" />
-            <parameter name="methodInfo" layout="${methodInfo}" />
+        <target xsi:type="Network" name="GelfTcp" address="tcp://127.0.0.1:11101" newLine="true" lineEnding="Null">
+            <layout type="GelfLayout" facility="GelfTcp">
+                <field name="threadid" layout="${threadid}" />
+                <field name="levelName" layout="${uppercase:${level}}" />
+                <field name="url" layout="${aspnet-request-url}" />
+                <field name="methodInfo" layout="${methodInfo}" />
+            </layout>
         </target>
 
-        <target name="GelfUdp"
-                xsi:type="GelfUdp"
-                serverUrl="127.0.0.1" port="11102"
-                facility="GelfUdp"
-                layout="${layout}">
-            <parameter name="thread" layout="${threadid}" />
-            <parameter name="levelName" layout="${uppercase:${level}}" />
-            <parameter name="url" layout="${aspnet-request-url}" />
-            <parameter name="methodInfo" layout="${methodInfo}" />
-        </target>
     </targets>
 
     <rules>
-        <logger name="*" minlevel="Trace" writeTo="AsyncWrapper, GelfHttp, GelfUdp" />
+        <logger name="*" minlevel="Trace" writeTo="AsyncWrapper, GelfTcp" />
     </rules>
 </nlog>
