--- a/Graylog.SampleApi/Properties/launchSettings.json
+++ b/Graylog.SampleApi/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "Graylog.SampleApi": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
